--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "regularAppShell",
+    "name": "regular-app-shell",
     "version": "1.1.1",
     "description": "A reusable React modal component built with Bootstrap for micro frontend architecture",
     "main": "dist/index.js",
@@ -55,7 +55,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/rajesh479/ReactPOC.git"
+        "url": "git+https://github.com/rajesh479/ReactPOC.git"
     },
     "bugs": {
         "url": "https://github.com/rajesh479/ReactPOC/issues"
